styles.css
/* ... */
body:not([data-viewer-loading]):not([data-hunt-uploading]) .loading-bar {
  display: none;
}

body[data-viewer-loading] nav,
body[data-viewer-open] nav,
body[data-viewer-loading] .fab,
body[data-viewer-open] .fab,
nav.disabled,
body[data-hunt-uploading] nav,
body[data-hunt-uploading] .bouton-hunt-submit {
  pointer-events: none;
  filter: brightness(0.4) grayscale(.5);
}

.fab>.material-icons::after {
  content: 'filter_list';
}

.fab.add>.material-icons::after {
  content: 'add';
}

body[data-hunt-uploading] .loading-bar>.bouton-retour {
  display: none;
}


/*
 * Sprite viewer
 */

@keyframes open-sprite-viewer {
  0% { opacity: 0; transform: scale(.7) translateZ(0); }
  100% { opacity: 1; transform: scale(1) translateZ(0); }
}

#sprite-viewer {
  display: none;
  opacity: 0;
  grid-column: 1 / 2;
  grid-row: 1 / 3;
  background: var(--sprite-viewer-bg-color);
  z-index: var(--z-sprite-viewer);
  grid-template-rows: calc(100% - 56px) 56px;
}

body[data-viewer-open=true] #sprite-viewer {
  display: grid;
  opacity: 1;
  /*animation: open-sprite-viewer .2s var(--easing-decelerate);*/
}

#sprite-viewer>.bouton-retour {
  justify-self: center;
  align-self: center;
  grid-row: 2 / 3;
  grid-column: 1 / 2;
}

.switch-shiny-regular {
  grid-row: 2 / 3;
  grid-column: 1 / 2;
  width: fit-content;
  height: fit-content;
  justify-self: end;
  align-self: center;
  margin-right: 16px;
}

[for=switch-shy-reg]>.shinystars {
  display: none;
  position: absolute;
  top: 50%;
  left: calc(50% - 10px);
  transform: translate(-50%, -50%);
  fill: white;
}

#sprite-viewer.shiny [for=switch-shy-reg]>.shinystars {
  display: block;
}

.sprite-viewer-dex-info {
  grid-row: 2 / 3;
  grid-column: 1 / 2;
  justify-self: start;
  align-self: center;
  margin-left: 16px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--bg-color);
  border-radius: 26px;
  height: 26px;
  padding: 0 8px;
  font-size: 13px;
}

.sprite-viewer-dex-info span + span {
  margin-left: 5px;
}

.info-dexid {
  opacity: .5;
}

.info-dexid::before {
  content: '#';
  opacity: .7;
}

.info-nom {
  text-transform: capitalize;
}

.sprite-scroller {
  display: grid;
  grid-row: 1 / 2;
  grid-column: 1 / 2;
  overflow-y: auto;
}

.sprite-list {
  grid-row: 1 / 2;
  grid-column: 1 / 2;
  display: none;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  height: fit-content;
  margin: auto;
}

#sprite-viewer.shiny .sprite-list.shiny,
#sprite-viewer.regular .sprite-list.regular {
  display: flex;
}

.dex-sprite {
  --sprite-size: calc(min(200px, 45vw));
  display: grid;
  grid-template-rows: var(--sprite-size) min-content;
  width: var(--sprite-size);
  margin: 6px 5px;
}

.single-sprite .dex-sprite {
  --sprite-size: calc(min(400px, 80vw));
}
.two-sprites .dex-sprite {
  --sprite-size: calc(min(400px, 60vw));
}

.dex-sprite img {
  width: 100%;
  height: auto;
}

.dex-sprite span {
  color: var(--text-color);
  font-size: 13px;
  line-height: 24px;
  text-transform: capitalize;
  padding: 0 10px;
  border-radius: 20px;
  max-width: calc(var(--sprite-size) - 10px);
  box-sizing: border-box;
  margin: 7px auto 0;
  position: relative;
  min-width: 35px;
  white-space: nowrap;
}

.dex-sprite span.on {
  background-color: var(--bg-color);
}
.dex-sprite span.off {
  display: none;
}
.dex-sprite span.on::before {
  content: "";
  position: absolute;
  left: calc(50% - 7px);
  top: -13px;
  height: 0;
  width: 0;
  border: 7px solid transparent;
  border-bottom: 7px solid var(--bg-color);
}

.dex-sprite>picture {
  position: relative;
}

@keyframes sprite-loading {
  0% { background-color: rgba(255, 255, 255, .06); }
  50% { background-color: rgba(255, 255, 255, .06); }
  75% { background-color: rgba(255, 255, 255, .1); }
  100% { background-color: rgba(255, 255, 255, .06); }
}

.dex-sprite>picture.loading {
  animation: sprite-loading 2s ease-out infinite;
}

picture.loading>img {
  opacity: 0;
}

picture.no-shiny>span {
  grid-row: 1 / 2;
  grid-column: 1 / 2;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  margin: 0;
  padding-top: 20%;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  background-color: hsla(0, 50%, 0%, .8);
  text-transform: none;
  text-align: center;
  line-height: 1.4em;
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! CHASSES EN COURS !!!!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

#chasses-en-cours>.section-contenu {
  flex-direction: column-reverse;
}

.hunt-card {
  height: auto;
  grid-template-columns: 120px 1fr;
  grid-template-rows: auto 1fr;
  order: 0;
  padding: 8px;
  box-sizing: border-box;
}

.hunt-card>.pokemon-sprite {
  border-radius: 0 0 10px 0;
  grid-row: 1 / 2;
  position: relative;
  top: -8px;
  left: -8px;
}

.hunt-card>.pokemon-sprite::before {
  background-image: var(--sprite, none);
  background-position: center center;
}

.hunt-edit {
  position: absolute;
  top: 0;
  right: 0;
  font-size: 13px;
  color: var(--text-color-soft);
  padding: 2px 4px;
  background-color: var(--danger-color);
  border-radius: 0 0 0 5px;
  z-index: 3;
}

.hunt-card:not(.edit)>.hunt-edit {
  display: none;
}

.form-element {
  grid-column: 1 / 3;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: wrap;
  gap: 8px;
}

.bouton-hunt-caught,
.bouton-hunt-submit {
  flex-grow: 1;
  margin: 0;
}

.caught .bouton-hunt-caught {
  background-color: transparent;
  border: 2px solid var(--button-ghost-color);
  box-sizing: border-box;
  box-shadow: none;
}

.bouton-hunt-remove {
  margin: 0;
}

.hunt-card.edit .bouton-hunt-remove:not(.bouton-hunt-edit),
.hunt-card:not(.edit) .bouton-hunt-edit {
  display: none;
}

.hunt-card>.sous-titre,
.hunt-card>.liste-options,
.hunt-card>.titre-options,
.hunt-card>.cote-a-cote {
  grid-column: 1 / 3;
}
/* ... */

